--- a/sound-on-motion-app.service
+++ b/sound-on-motion-app.service
@@ -3,10 +3,9 @@ Description=Sound on Motion App Service
 After=network.target
 
 [Service]
-User=<YourUsername>
-Group=<YourUsername>
+User=root
 WorkingDirectory=/opt/sound-on-motion
-ExecStart=/usr/bin/pipenv run python -m src.app
+ExecStart=/bin/sh ./entrypoint.sh python -m src.app
 Restart=always
 
 [Install]
